WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125836
[SVG] Fix CSS transform handling when zoomed
https://bugs.webkit.org/show_bug.cgi?id=125836
Summary
[SVG] Fix CSS transform handling when zoomed
Ryosuke Niwa
Reported
2013-12-16 22:18:05 PST
Consider merging
https://chromium.googlesource.com/chromium/blink/+/12e43b6d16005ed322d97e77e2ec72b0b9d40f9a
CSS takes the page zoom factor into account for all computed length values, including transform translation components. OTOH, SVG applies the zoom factor globally (at the SVG root level) - so when using CSS transforms in SVG, the translation components are scaled twice. This CL adjusts CSS transforms when used in SVG to account for the unexpected translation scale.
Attachments
Patch
(5.11 KB, patch)
2014-04-08 12:23 PDT
,
Adenilson Cavalcanti Silva
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adenilson Cavalcanti Silva
Comment 1
2014-04-08 12:23:54 PDT
Created
attachment 228868
[details]
Patch
Tim Horton
Comment 2
2014-04-08 14:28:19 PDT
Comment on
attachment 228868
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228868&action=review
> Source/WebCore/svg/SVGGraphicsElement.cpp:80 > + float zoom = style->effectiveZoom();
does this take page scale into account? page zoom? which ones are baked into the CSS transform values?
WebKit Commit Bot
Comment 3
2014-04-08 15:28:04 PDT
Comment on
attachment 228868
[details]
Patch Clearing flags on attachment: 228868 Committed
r166967
: <
http://trac.webkit.org/changeset/166967
>
WebKit Commit Bot
Comment 4
2014-04-08 15:28:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug