[SVG] Fix CSS transform handling when zoomed https://bugs.webkit.org/show_bug.cgi?id=125836

Reviewed by Tim Horton.

Source/WebCore:

Tests: svg/zoom/page/zoom-css-transforms-expected.svg
       svg/zoom/page/zoom-css-transforms.svg

Adjusts CSS transforms when used in SVG to account for unexpected
translation scale. Backport from Chromium #174910.

* svg/SVGGraphicsElement.cpp:
(WebCore::SVGGraphicsElement::animatedLocalTransform):

LayoutTests:

Adjusts CSS transforms when used in SVG to account for unexpected
translation scale. Backport from Chromium #174910.

* svg/zoom/page/zoom-css-transforms-expected.svg: Added.
* svg/zoom/page/zoom-css-transforms.svg: Added.


Canonical link: https://commits.webkit.org/149452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166967 268f45cc-cd09-0410-ab3c-d52691b4dbfc